--- a/src/app/dbz/pages/main-page.component.html
+++ b/src/app/dbz/pages/main-page.component.html
@@ -1,1 +1,16 @@
-<h1>DBZ Main Page</h1>
+<h1>DBZ Personajes</h1>
+<hr />
+
+<div class="row">
+  <div class="col">
+    <dbz-list
+      [characterList]="dbzService.characters"
+      (onDelete)="dbzService.onDeleteCharacter($event)"
+    ></dbz-list>
+  </div>
+  <div class="col">
+    <dbz-add-character
+      (onNewCharacter)="dbzService.onNewCharacter($event)"
+    ></dbz-add-character>
+  </div>
+</div>
