--- a/src/app/dbz/components/list/list.component.html
+++ b/src/app/dbz/components/list/list.component.html
@@ -22,6 +22,8 @@
       <span>{{ character.power }}</span>
     </div>
 
-    <button (click)="onDeletCharacter(i)" class="btn btn-danger">X</button>
+    <button (click)="onDeletCharacter(character.id)" class="btn btn-danger">
+      X
+    </button>
   </li>
 </ul>
