--- a/src/app/dbz/pages/main-page.component.html
+++ b/src/app/dbz/pages/main-page.component.html
@@ -4,13 +4,13 @@
 <div class="row">
   <div class="col">
     <dbz-list
-      [characterList]="dbzService.characters"
-      (onDelete)="dbzService.onDeleteCharacter($event)"
+      [characterList]="characters"
+      (onDelete)="onDeletCharater($event)"
     ></dbz-list>
   </div>
   <div class="col">
     <dbz-add-character
-      (onNewCharacter)="dbzService.onNewCharacter($event)"
+      (onNewCharacter)="onNewCharacter($event)"
     ></dbz-add-character>
   </div>
 </div>
